--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<script>
-		window.location.replace("/threejs-intro");
+		window.location.replace("/");
 	</script>
 </body>
 </html>
